# rust-movie-app

./: Cargo.toml  Justfile  docker-compose.yml  jq
src/: config.rs  lib.rs  main.rs  movie.rs  repositories.rs
src/clients/: mongo_client.rs
src/config/: mongo_config.rs
src/controllers/: movie_controller.rs
