[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
just = "1.16.0"
mongodb = "2.7.1"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.34.0"
