[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
mongodb = "2.7.1"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.34.0"

[dev-dependencies]
cargo-watch = "8.4.1"
just = "1.16.0"

